--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+bin/
 env/
 build/
 develop-eggs/
@@ -26,6 +27,10 @@ wheels/
 *.egg
 .idea/
 *.mp4
+pip-selfcheck.json
+pyvenv.cfg
+start.sh
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
